fix: delete user response doc
